salesforce-metadata/objects/BahaMar_Reservation__c.object
<CustomObject>
    <label>Baha Mar Reservation</label>
    <pluralLabel>Baha Mar Reservations</pluralLabel>
    <nameField>
        <label>Confirmation Number</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
    <fields>
        <fullName>Contact__c</fullName>
        <label>Guest</label>
        <type>Lookup</type>
        <referenceTo>Contact</referenceTo>
        <relationshipName>BahaMar_Reservations</relationshipName>
    </fields>
    <fields>
        <fullName>CheckIn__c</fullName>
        <label>Check-In</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CheckOut__c</fullName>
        <label>Check-Out</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>GuestCount__c</fullName>
        <label>Guest Count</label>
        <type>Number</type>
        <precision>3</precision>
        <scale>0</scale>
    </fields>
    <fields>
        <fullName>RoomType__c</fullName>
        <label>Room Type</label>
        <type>Text</type>
        <length>80</length>
    </fields>
    <fields>
        <fullName>Hotel__c</fullName>
        <label>Hotel</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value><fullName>Grand Hyatt</fullName><default>false</default><label>Grand Hyatt</label></value>
                <value><fullName>SLS</fullName><default>false</default><label>SLS</label></value>
                <value><fullName>Rosewood</fullName><default>false</default><label>Rosewood</label></value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value><fullName>Booked</fullName><default>false</default><label>Booked</label></value>
                <value><fullName>Modified</fullName><default>false</default><label>Modified</label></value>
                <value><fullName>Cancelled</fullName><default>false</default><label>Cancelled</label></value>
            </valueSetDefinition>
        </valueSet>
    </fields>
</CustomObject>